--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Studentsite</title>
 </head>
 <body>
-    hi I am jini!
-    This is my personal portfolio!
+    Hey! I am jini!
+    This is my personal Website!
 </body>
 </html>
