--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Studentsite</title>
 </head>
 <body>
-    Hey! I am jini!
+    Hey! I am JINI!
     This is my personal Website!
 </body>
 </html>
