update details of project

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     Hey! I am JINI!
     This is my personal Website!
+
+    I have worked on few CLI apps.I'll showcase it here tomorow.
 </body>
 </html>
