--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     This is my personal Website!
 
     I have worked on few CLI apps.I'll showcase it here tomorow.
+
+    My favorite movie is 3 IDIOTS . Whenever I watch this movie . I am very happy to see it and laugh . 
 </body>
 </html>
